# feedback_forum

./: FEATURES.md  Readme.md  docker-compose-dev.yml  pyproject.toml
src/alembic/: env.py
src/app/: calculations.py  config.py  main.py  models.py  oauth2.py  schemas.py
src/app/routers/: auth.py  jira.py  post.py  root.py  user.py  vote.py
src/app/routers/templates/: forum.html  login.html  new_user.html  thx.html  welcome.html  welcome_page.html
src/frontend/: forum.html  login.html  thx.html  welcome.html  welcome_page.html
src/frontend/assets/css/: login.css
src/frontend/assets/js/: login.js
src/frontend/css/: forum.css  login.css  thx.css  welcome.css  welcome_page.css
src/frontend/js/: forum.js  login.js  welcome_page.js
src/tests/: conftest.py  test_posts.py  test_users.py
src/tests/fixtures/: client.py  database.py  posts.py  token.py
src/utils/: generate_key_hex.py
