[tool.poetry]
name = "fastapi blog"
version = "0.1.0"
description = "FastAPI project with Alembic, PostgreSQL, and JWT Authentication"
authors = ["kurawamnedura <olyabjj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.75.0"
uvicorn = "0.15.0"
sqlalchemy = "1.4.32"
psycopg2 = "2.9.3"
alembic = "1.7.7"
python-dotenv = "0.20.0"
pydantic = "1.9.0"
bcrypt = "3.2.0"
passlib = "1.7.4"
python-jose = "3.3.0"
python-multipart = "0.0.5"
requests = "2.27.1"
aiohttp = "3.8.1"
ujson = "4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.scripts]
# If you have custom scripts you can define them here
# example = "my_fastapi_project.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"